Add padding to title.

--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -56,10 +56,13 @@
   </div>
 
   <!-- div log -->
-  <div class="pull-right" style="width:65%">
+  <div class="pull-right" style="width:65%" >
+    <div id="view_title" style="padding-bottom:15px">
+      <i class="icon-arrow-left"></i><em> Click on buttons for details.</em>
+    </div>
+
     <small>
       <div id="view_code" class="" data-spy="affix" data-offset-top="40" style="overflow-y: auto;height:700px">
-        <i class="icon-arrow-left"></i><em> Click on buttons for details.</em>
       </div>
     </small>
   </div>
