--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -7,7 +7,7 @@
 
 
 <head>
-  <title>Ruby agents sdk admin</title>
+  <title>MDI SDK Server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap -->
