Put some little margin in unit test page.

--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -13,10 +13,10 @@
   </div>
 
   <div class="row-fluid">
-    <div class="pull-left">
+    <div class="pull-left"  style="margin-right: 10px">
           Run tests for agent:
     </div>
-    <div class="btn-group pull-left">
+    <div class="btn-group pull-left" style="margin-right: 10px">
       <a id="agent-to-test" class="btn dropdown-toggle" data-toggle="dropdown" href="#">
         All agents
         <span class="caret"></span>
@@ -28,6 +28,7 @@
           <li><a id='all-agents-element' tabindex="-1" href="#">All agents</a></li>
       </ul>
     </div>
+
     <div>
       <button id="run-tests" class="btn btn-primary pull-left">Run tests</button>
     </div>
