Fix building doc event at first VM startup + use relative paths.

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -17,7 +17,7 @@
     </p>
   </div>
   <div class="modal-footer">
-    <a id="myModal_btn" class="btn btn-primary" href="/doc">See documentation</a>
+    <a id="myModal_btn" class="btn btn-primary" href="/doc/file.README.html">See documentation</a>
     <a class="btn btn-primary" href="/">No thanks</a>
   </div>
 </div>
