--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -13,10 +13,10 @@
   </div>
 
   <div class="row-fluid">
-    <div class="pull-left">
+    <div class="pull-left" style="margin-right:10px;">
           Run tests for agent:
     </div>
-    <div class="btn-group pull-left">
+    <div class="btn-group pull-left" style="margin-right:20px;">
       <a id="agent-to-test" class="btn dropdown-toggle" data-toggle="dropdown" href="#">
         All agents
         <span class="caret"></span>
@@ -287,7 +287,7 @@
               update_run_tests_button();
             },
             error: function(xhr, status, errorThrown) {
-              console.log("An error occured when checking for test status update: " + status + " (" + errorThrown + ") with message " + xhr.responseText);
+              console.error("An error occured when checking for test status update: " + status + " (" + errorThrown + ") with message " + xhr.responseText);
               display_alert("warning", "An error occured when checking for test status update: " + status + " (" + errorThrown + ") with message " + xhr.responseText);
             }
           }) // ajax
@@ -351,7 +351,7 @@
             $(parent + ".summary").html("");
             $(parent + '.start-time').html("");
           } else {
-            log.error("Can not update status display because " + current_status + " is an unknow status.");
+            console.error("Can not update status display because " + current_status + " is an unknow status.");
           }
         } // function update_status_display
 
