Fix tab jump on reboot server.

--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -74,6 +74,7 @@
                 <% if @active_tab=='projects'%>value="/projects"<% end %>
                 <% if @active_tab=='logSdkAgentsPunk'%>value="/logSdkAgentsPunk#endlog"<% end %>
                 <% if @active_tab=='patch_note'%>value="/patch_note"<% end %>
+                <% if @active_tab=='unit_tests'%>value="/unit_tests"<% end %>
                 >
 
                 <button id="btn-server-reboot"  data-toggle="tooltip" title="Reboot the ruby server.
