Dismiss modal when button clicked.

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -129,6 +129,11 @@
       modal.on('shown', function () {
         $('#myModal_btn').focus();
       })
+
+      $('#myModal_btn').click(function(){
+        $('#myModal').modal('hide')
+      })
+
     });
   </script>
 <% end %>
