Open patch notes in new tab and improve capitalization of modal text.

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="modal-body">
     <p>
-      This is the first time this vm is launched.<br>
+      This is the first time this VM is launched.<br>
       I strongly recommend that you have a look at the documentation.
     </p>
   </div>
@@ -26,16 +26,16 @@
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Sdk vm update !</h3>
+    <h3 id="myModalLabel">SDK VM update !</h3>
   </div>
   <div class="modal-body">
     <p>
-      The version of your sdk vm has changed !<br>
+      The version of your SDK VM has changed !<br>
       Maybe there is valuable information for you on the patch note page.
     </p>
   </div>
   <div class="modal-footer">
-    <a id="myModal_btn" class="btn btn-primary" href="/patch_note">See changes</a>
+    <a id="myModal_btn" class="btn btn-primary" href="/patch_note" target="_blank">See changes</a>
     <a class="btn btn-primary" href="/">No thanks</a>
   </div>
 </div>
