Add a divider before "All agents" in the dropdown menu.

--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -22,6 +22,7 @@
         <% @agents.each do |agent_name| %>
           <li><a id='<%= agent_name %>-element' tabindex="-1" href="#"><%= agent_name %></a></li>
         <% end %>
+          <li class="divider"></li>
           <li><a id='all-agents-element' tabindex="-1" href="#">All agents</a></li>
       </ul>
     </div>
