--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -24,6 +24,7 @@
   <script src="/js/jquery.js"></script>
   <script src="/js/highlight.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/jquery.cookie.js"></script>
   <meta charset="utf-8" />
 
 <!--
